@@ -1,8 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.144 2005/04/17 00:01:33 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.145 2005/04/17 05:57:10 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  17 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Reverted change to ArchTemplate and added support for commented line in old
+  code.
 
   16 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
   Changed _edit_config() to modify value in-place instead of commenting out and
